<resources>
    <string name="app_name">ActorApplication</string>

    <string name="dialog_text_title">Specify Actor:</string>
    <string name="dialog_name">Name:</string>
    <string name="dialog_surname">Surname:</string>
    <string name="dialog_biography">Biography::</string>
    <string name="dialog_rating">Rating:</string>
    <string name="dialog_date_of_birth">Date of birth:</string>

    <string name="dialog_movie_text">Specify Movie</string>
    <string name="dialog_movie_title">Title:</string>
    <string name="dialog_movie_genre">Genre:</string>
    <string name="dialog_movie_year">Year of Release</string>

    <string name="action_title">Actor Application</string>
    <string name="action_add">Add</string>
    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_image">Image</string>

    <string name="preferences_toast_title">Toast message</string>
    <string name="preferences_toast_key">Toast</string>
    <string name="preferences_toast_summary">Show action as a toast message</string>

    <string name="preferences_notification_title">Notification message</string>
    <string name="preferences_notification_key">Notification</string>
    <string name="preferences_notification_summary">Show action as a notification message</string>

    <string name="notification_add_title">Add Actor</string>
    <string name="notification_add_text">New Actor has been added in the list</string>
    <string name="notification_add_movie_title">Add Movie</string>
    <string name="notification_add_movie_text">New Movie has been added in the list</string>
    <string name="notification_edit_title">Edit Actor</string>
    <string name="notification_edit_text">The data about the Actor has been editted</string>
    <string name="notification_delete_title">Delete Actor</string>
    <string name="notification_delete_text">The Actor has been deleted</string>


    <string name="alert_dialog">Autor aplikacije: Tijana Vranic</string>
    <string name="alert_button_ok">OK</string>
</resources>
