<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.tijana.actorapplication.activities.DialogActivity">

    <TextView
        android:id="@+id/dialog_edit_movie_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_movie_text" />

    <TextView
        android:id="@+id/dialog_movie_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_movie_title" />

    <EditText
        android:id="@+id/edit_movie_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/dialog_movie_genre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_movie_genre" />

    <EditText
        android:id="@+id/edit_movie_genre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/dialog_movie_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_movie_year" />

    <EditText
        android:id="@+id/edit_movie_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_weight="1"
            android:onClick="onClickOK"
            android:text="OK" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:onClick="onClickCancel"
            android:text="Cancel" />
    </LinearLayout>

</LinearLayout>
